--- a/UnrealGrpc.uplugin
+++ b/UnrealGrpc.uplugin
@@ -14,7 +14,8 @@
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"SupportedTargetPlatforms": [
-		"Win64"
+		"Win64",
+		"Linux",
 	],
 	"Modules": [
 		{
